<resources>
    <string name="app_name">CoronaVirus</string>
    <string name="informa_es_sobre_o_corona_virus">Informações Sobre o Corona Virus</string>
    <string name="quais_os_metudos_de_preven_o">Quais os Metudos de Prevenção ?</string>
    <string name="uso_de_achool_em_gel_recomendado_no_dia_a_dia">Uso de Achool em Gel é Recomendado no Dia a Dia</string>
    <string name="lave_as_m_os_com_gua_e_sab_o_regularmente">Lave as Mãos com Água e Sabão Regularmente</string>
    <string name="Lorem_Ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. sou gay</string>
    <string name="evita_dissemina_o_de_virus_e_bact_rias_no_ar">Evita Disseminação de Virus e Bactérias no Ar</string>
    <string name="o_uso_de_mascaras_cir_rgia_ou_de_prote_o_importante">O Uso de Mascaras Cirúrgia ou De Proteção é Importante</string>
    <string name="tosse_forte_seca_ou_com_muco">Tosse Forte , Seca ou Com Muco</string>
    <string name="febre_suor_e_mal_estar">Febre , Suor e Mal Estar</string>
    <string name="falta_de_ar_e_dificuldades_respiratorias">Falta de Ar e Dificuldades Respiratorias</string>
    <string name="dores_abdonimais_vomitos_e_enjoo">Dores Abdonimais , Vomitos e Enjoo</string>
    <string name="text1">Os Coronavírus (CoV) são uma grande família viral, conhecidos desde meados dos anos 1960, que causam infecções respiratórias em seres humanos e em animais. Geralmente, infecções por coronavírus causam doenças respiratórias leves a moderada, semelhantes a um resfriado comum.</string>
    <string name="txt2">Alguns coronavírus podem causar síndromes respiratórias graves, como a síndrome respiratória aguda grave que ficou conhecida pela sigla SARS da síndrome em inglês “Severe Acute Respiratory Syndrome”. SARS é causada pelo coronavírus associado à SARS (SARS-CoV), sendo os primeiros relatos na China em 2002. O SARS-CoV se disseminou rapidamente para mais de doze países na América do Norte, América do Sul, Europa e Asia, infectando mais de 8.000 pessoas e causando entorno de 800 mortes</string>
    <string name="txt3">Pela localização dos casos, a doença passou a ser designada como síndrome respiratória do Oriente Médio, cuja sigla é MERS, do inglês “Middle East Respiratory Syndrome” e o novo vírus nomeado coronavírus associado à MERS (MERS-CoV).</string>
    <string name="txt4">De 2 a 14 dias ,\nDe uma forma geral, a transmissão viral ocorre apenas enquanto persistirem os sintomas É possível a transmissão viral após a resolução dos sintomas, mas a duração do período de transmissibilidade é desconhecido para o SARS-CoV e o MERS-CoV. Durante o período de incubação e casos assintomáticos não são contagiosos.</string>
</resources>
